--- a/templates/email/verification.html
+++ b/templates/email/verification.html
@@ -1,10 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+  <head>
+    <title>Account Verification</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  </head>
+  <style>
+      .img{
+          width:30%;
+          hight:30%;
+
+      }
+      .logo{
+          align-content: center;
+          margin-bottom: 1vh;
+          margin-left: 20vw;
+          margin-right: 20vw;
+
+      }
+  </style>
+  <body>
+
+    <div class="main">
+
+        <div class="logo">
+                <img class="img logo" src="https://mypcb.in/static/logo.png">
+        </div>
+        <div class="content" style="border-color:#30ff3a; border-style: solid;border-radius: 5px;">
+
+            <div class="row mx-2 justify-content-center">
+                <p> Welcome {{ data.user_name }}, </p>
+                <p> Your account has been created successfully, In order to use it , you need to verify this email ID</p>
+            </div>
+            <div class="row mx-2 justify-content-center">
+                <button onclick="window.location.href='{{ data.verify_link }}'" class="btn btn-success">Verify Email </button>
+            </div>
+            <div class="row mx-2">
+                <p>If above button not working <a a href="{{ data.verify_link }}"> click here or copy this link and paste in browser {{ data.verify_link }}</a></p>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
