--- a/templates/dashboard/account/address.html
+++ b/templates/dashboard/account/address.html
@@ -1,7 +1,7 @@
 {% extends './account.html' %}
 {% block account_content %}
 {% load static %}
-<div class="col-lg-12 col-sm-12 mt-3 mb-5 mx-auto" id="address">
+<div class="col-lg-12 col-sm-12 mt-3 mb-5 " id="address">
     <div class="row">
         <div class="col-lg-12 float-left">
             <h4 class="d-inline mt-1  ml-2 float-left">Addresses</h4>
