--- a/templates/dashboard/account/profile.html
+++ b/templates/dashboard/account/profile.html
@@ -1,7 +1,7 @@
 {% extends './account.html' %}
 {% block account_content %}
 {% load static %}
-<div class="col-lg-12  col-sm-12 mt-3 mx-auto form-group" id="dash-profile" method="POST">
+<div class="col-lg-12  col-sm-12 mt-3  form-group" id="dash-profile" method="POST">
     <div class="row">
         <div class="col-lg-12 float-left">
             <h4 class="d-inline mt-1  ml-2 float-left ">Profile</h4>
