--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -23,17 +23,12 @@
     </head>
 
     <body>
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
-
-
         <nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
               <!-- Brand -->
-            <a class="navbar-brand pt-0" href="./index.html" style="margin:3%">
+            <a class="navbar-brand pt-0" href="/" style="margin:3%">
                 <img src="{% static 'logo.png' %}" class="navbar-brand-img" alt="...">
             </a>
             <div class="collapse navbar-collapse" id="sidenav-collapse-main">
@@ -41,7 +36,7 @@
                 <div class="navbar-collapse-header d-md-none">
                     <div class="row">
                         <div class="col-6 collapse-brand" >
-                            <a href="./index.html">
+                            <a href="/">
                                 <img src="{% static 'logo.png' %}">
                             </a>
                         </div>
@@ -53,37 +48,33 @@
                         </div>
                     </div>
                 </div>
-            
+
             <!-- Navigation -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link font-weight-bold" href="">
-                            <i class="ni ni-tv-2 text-primary"></i> HOME
+                        <a class="nav-link font-weight-bold" href="/">
+                            <i class="fas fa-home"></i></i> HOME
                          </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link font-weight-bold" href="">
-                            <i class="ni ni-bullet-list-67 text-orange"></i> PCB Orders
+                        <a class="nav-link font-weight-bold" href="/dashboard/pcborders/">
+                            <i class="fas fa-clipboard-list text-green"></i></i> PCB Orders
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link font-weight-bold" href="">
-                            <i class="ni ni-ruler-pencil text-yellow"></i> PCB Design Orders
+                            <i class="fas fa-pencil-ruler"></i></i> PCB Design Orders
                         </a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link font-weight-bold" href="">
-                            <i class="ni ni-support-16 text-red"></i> Other Services
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link font-weight-bold" href="in.html">
-                            <i class="ni ni-single-02 text-blue "></i> Account
+                        <a class="nav-link font-weight-bold" href="/dashboard/account/profile/">
+                            <i class="fas fa-user-circle"></i></i> Account
                         </a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link font-weight-bold" onclick="document.forms['logout'].submit();return false;" >
-                                <i class="ni ni-lock-circle-open text-red"></i> Log Out
+                                <i class="fas fa-sign-out-alt"></i> Log Out
                         </a>
                     </li>
 
@@ -107,8 +98,7 @@
           
         {% endblock content %}
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
-        
+
     </body>
     <form method="POST" name="logout" action="/logout/">
         {% csrf_token %}
