--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -7,11 +7,50 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!--link href="./assets/img/brand/favicon.png" rel="icon" type="image/png"-->
+
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-        <link href="{% static 'dashboard/assets/vendor/nucleo/css/nucleo.css' %}" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-        <link type="text/css" href="{% static 'dashboard/assets/css/argon.css' %}" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <style>
+            :root{--blue:#5e72e4;--indigo:#5603ad;--purple:#8965e0;--pink:#f3a4b5;--red:#f5365c;--orange:#fb6340;--yellow:#ffd600;--green:#2dce89;--teal:#11cdef;--cyan:#2bffc6;--white:#fff;--gray:#8898aa;--gray-dark:#32325d;--light:#ced4da;--lighter:#e9ecef;--primary:#5e72e4;--secondary:#f7fafc;--success:#2dce89;--info:#11cdef;--warning:#fb6340;--danger:#f5365c;--light:#adb5bd;--dark:#212529;--default:#172b4d;--white:#fff;--neutral:#fff;--darker:black;--breakpoint-xs:0;--input-padding-x:1.5rem;--input-padding-y:.75rem;--breakpoint-sm:576px;--breakpoint-md:768px;--breakpoint-lg:992px;--breakpoint-xl:1200px;--font-family-sans-serif:Open Sans, sans-serif;--font-family-monospace:SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;}
+            .col-form-label{font-size:inherit;line-height:1.5;margin-bottom:0;padding-top:calc(.625rem + 1px);padding-bottom:calc(.625rem + 1px);}
+            .bg-gradient-cus{background:linear-gradient(87deg, #6200ee 0,  #3700b3 100%)!important;}
+            .text-green{color:#2dce89!important;}
+
+            .main-content{position:relative;}
+            @media (min-width: 768px){
+            .main-content .container-fluid{padding-right:39px!important;padding-left:39px!important;}
+            }
+            @media (min-width: 768px){
+            .navbar-vertical.navbar-expand-md.fixed-left + .main-content{margin-left:250px;}
+            }
+            .header{position:relative;}
+            .nav-wrapper{padding:1rem 0;border-top-left-radius:.375rem;border-top-right-radius:.375rem;}
+            .navbar-vertical{box-shadow:0 0 2rem 0 rgba(136, 152, 170, .15)!important;}
+            .navbar-vertical .navbar-brand{margin-right:0;}
+            .navbar-vertical .navbar-brand-img,.navbar-vertical .navbar-brand > img{max-width:100%;max-height:2rem;}
+            @media (min-width: 768px){
+            .navbar-vertical .navbar-collapse{margin-right:-1rem;margin-left:-1rem;padding-right:1rem;padding-left:1rem;}
+            .navbar-vertical .navbar-collapse:before{display:block;margin:1rem -1rem;content:'';}
+            }
+            .navbar-vertical .navbar-nav{margin-right:-1rem;margin-left:-1rem;}
+            .navbar-vertical .navbar-nav .nav-link{font-size:.9rem;padding-right:1rem;padding-left:1rem;}
+            .navbar-vertical .navbar-nav .nav-link > i{font-size:.9375rem;line-height:1.5rem;min-width:2.25rem;}
+            .navbar-vertical .navbar-nav .nav-link{display:flex;align-items:center;}
+            .navbar-vertical .navbar-heading{font-size:.75rem;padding-top:.25rem;padding-bottom:.25rem;letter-spacing:.04em;text-transform:uppercase;}
+            @media (min-width: 768px){
+            .navbar-vertical.navbar-expand-md{position:fixed;top:0;bottom:0;display:block;overflow-y:auto;width:100%;max-width:250px;padding-right:1.5rem;padding-left:1.5rem;}
+            }
+            @media (min-width: 768px){
+            .navbar-vertical.navbar-expand-md.fixed-left{left:0;border-width:0 1px 0 0;}
+            .navbar-vertical.navbar-expand-md .navbar-collapse{display:flex;flex-direction:column;margin-right:-1.5rem;margin-left:-1.5rem;padding-right:1.5rem;padding-left:1.5rem;flex:1 1;align-items:stretch;}
+            .navbar-vertical.navbar-expand-md .navbar-collapse > *{min-width:100%;}
+            .navbar-vertical.navbar-expand-md .navbar-nav{flex-direction:column;margin-right:-1.5rem;margin-left:-1.5rem;}
+            .navbar-vertical.navbar-expand-md .navbar-nav .nav-link{padding:.65rem 1.5rem;}
+            .navbar-vertical.navbar-expand-md .navbar-brand{display:block;padding-top:1rem;padding-bottom:1rem;text-align:center;}
+            .navbar-vertical.navbar-expand-md .navbar-brand-img{max-height:2.5rem;}
+            }
+        </style>
         <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -32,23 +71,6 @@
                 <img src="{% static 'logo.png' %}" class="navbar-brand-img" alt="...">
             </a>
             <div class="collapse navbar-collapse" id="sidenav-collapse-main">
-            <!-- Collapse header -->
-                <div class="navbar-collapse-header d-md-none">
-                    <div class="row">
-                        <div class="col-6 collapse-brand" >
-                            <a href="/">
-                                <img src="{% static 'logo.png' %}">
-                            </a>
-                        </div>
-                        <div class="col-6 collapse-close">
-                            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle sidenav">
-                                <span></span>
-                                <span></span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
             <!-- Navigation -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -77,7 +99,6 @@
                                 <i class="fas fa-sign-out-alt"></i> Log Out
                         </a>
                     </li>
-
                 </ul>
             <!-- Divider -->
                 <hr class="my-3">
@@ -97,11 +118,10 @@
         {% block content %}
           
         {% endblock content %}
-
-
     </body>
     <form method="POST" name="logout" action="/logout/">
         {% csrf_token %}
         <input type="hidden" name="logout_string" value="{{ status.logout_string }}">
     </form>
+
 </html>
