--- a/templates/email/verification.html
+++ b/templates/email/verification.html
@@ -4,43 +4,76 @@
     <title>Account Verification</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
   <style>
+      .content
+      {
+        
+          padding-left: 20px;
+          font-size: 25px;
+          font-family: Arial, Helvetica, sans-serif;
+          border-top-left-radius: 20px;
+          border-top-right-radius: 20px;
+          border-bottom-left-radius: 20px;
+          border-bottom-right-radius: 20px;
+      }
       .img{
           width:30%;
           hight:30%;
-
       }
       .logo{
           align-content: center;
           margin-bottom: 1vh;
           margin-left: 20vw;
           margin-right: 20vw;
-
       }
-  </style>
-  <body>
-
+      body{
+          background-color: #e6e6e6;
+      }
+     button{
+        width: 250px;
+        background-color: #008000;
+        color: white;
+        border-radius: 8px;
+        border: white; 
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+         
+      }
+     a:hover{
+          background-color: white;
+         border: red;
+         text-decoration: none;
+      }
+      i:hover
+      {
+          color: orangered;
+      }
+      </style>
+  
+    <body>
+        <span>
     <div class="main">
-
         <div class="logo">
                 <img class="img logo" src="https://mypcb.in/static/logo.png">
         </div>
-        <div class="content" style="border-color:#30ff3a; border-style: solid;border-radius: 5px;">
-
+        <div class="content" style="border-color:#30ff3a; border-style: solid;">
             <div class="row mx-2 justify-content-center">
                 <p> Welcome {{ data.user_name }}, </p>
                 <p> Your account has been created successfully, In order to use it , you need to verify this email ID</p>
             </div>
             <div class="row mx-2 justify-content-center">
-                <button onclick="window.location.href='{{ data.verify_link }}'" class="btn btn-success">Verify Email </button>
+                <button  onclick="window.location.href='{{ data.verify_link }}'" class="btn btn-success">Verify Email </button>
             </div>
             <div class="row mx-2">
-                <p>If above button not working <a a href="{{ data.verify_link }}"> click here or copy this link and paste in browser {{ data.verify_link }}</a></p>
+                <p>If above button not working <a a href="{{ data.verify_link }}"><i> click here or copy this link and paste in browser {{ data.verify_link }}</i></a></p>
             </div>
-
         </div>
     </div>
+            </span>
 </body>
 </html>
